--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWiIreEhs4AnwIs9mHyuQU",
+      "authorship_tag": "ABX9TyPKvXhH+6/95/9csRiT27Vg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bskdhanush/Capstone_project/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bskdhanush/Capstone_Code/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,22 +34,33 @@
       },
       "outputs": [],
       "source": [
-        "import tensorflow as tf\n",
-        "import numpy as np\n",
-        "saved=tf.keras.models.load_model('ckd_model.h5')"
+        "import pickle\n",
+        "import numpy as np"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "saved.summary()"
+        "filename='CKD_pred'\n",
+        "loaded_model=pickle.load(open(filename,'rb'))"
+      ],
+      "metadata": {
+        "id": "GpIO-av0fbEP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loaded_model.summary()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pisb9gF8hTs3",
-        "outputId": "96a1b3c0-7d6c-4eda-b510-9da4a5ed01be"
+        "outputId": "159c83e4-858e-44ac-b8f1-33027580099f"
       },
       "execution_count": null,
       "outputs": [
@@ -57,17 +68,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential_2\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " dense_2 (Dense)             (None, 256)               1792      \n",
+            " dense_4 (Dense)             (None, 256)               2048      \n",
             "                                                                 \n",
-            " dense_3 (Dense)             (None, 1)                 257       \n",
+            " dense_5 (Dense)             (None, 1)                 257       \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 2,049\n",
-            "Trainable params: 2,049\n",
+            "Total params: 2,305\n",
+            "Trainable params: 2,305\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ]
@@ -77,19 +88,16 @@
     {
       "cell_type": "code",
       "source": [
-        "data= ( 1,2,1,93,33,0 )\n",
-        "data=np.array(data)\n",
-        "data=data.reshape((1,-1))\n",
-        "saved.predict(data)\n",
-        "\n",
-        "\n"
+        "data= [[0.50 , 0.8 , 0.393939 , 0.412281,  0.609756,  1.0 , 0.0]]\n",
+        "final=loaded_model.predict(data)\n",
+        "print(final)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "i74-WZktgjat",
-        "outputId": "da33bee3-3d88-4dd0-c19f-f0355578a5b4"
+        "outputId": "553c2435-e8c4-457e-bd8c-1abfb79e510e"
       },
       "execution_count": null,
       "outputs": [
@@ -97,18 +105,35 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 24ms/step\n"
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "[[0.]]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if final==1:\n",
+        "  print(\"CKD\")\n",
+        "else :\n",
+        "  print(\"Nckd\")  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "bOOWODyDNAiK",
+        "outputId": "07a9f979-07ae-4076-f0a7-aa28a602e512"
+      },
+      "execution_count": null,
+      "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1.]], dtype=float32)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nckd\n"
+          ]
         }
       ]
     }
