--- a/test.ipynb
+++ b/test.ipynb
@@ -34,8 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "import pickle\n",
-        "import numpy as np"
+        "import pickle"
       ]
     },
     {
